--- a/PrismUnityTest/App.config
+++ b/PrismUnityTest/App.config
@@ -1,6 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="modules" type="Prism.Modularity.ModulesConfigurationSection, Prism.Wpf" />
+  </configSections>
+  <startup>
+  </startup>
+  <modules>
+    <module assemblyFile="ModuleA.dll" moduleType="ModuleA.ModuleCModule, ModuleC, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" moduleName="ModuleCModule" startupLoaded="True" />
+  </modules>
 </configuration>
